--- a/client/package.json
+++ b/client/package.json
@@ -12,5 +12,12 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "svelte": "^4.2.12",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "husky": "^9.0.11",
+    "is-ci": "^3.0.1",
+    "socket.io-client": "^4.7.5",
+    "svelte-french-toast": "^1.2.0",
+    "svelte-navigator": "^3.2.2"
   }
 }
